--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,8 @@ Title: Set of datasets from PISA 2009 study
 Author: Przemyslaw Biecek <przemyslaw.biecek@gmail.com>
 Maintainer: Przemyslaw Biecek <przemyslaw.biecek@gmail.com>
 Description: This package aggregates datasets from PISA 2009 study. 
-        The original dataset is avaliable here: \code{http://pisa2009.acer.edu.au/downloads.php}. It was converted into the R package to facilitate access for researchers familiar with R.
-        The PISA2009lite package containes raw datasets avaliable on the PISA webpage. In the package PISA2009 you will find additional datasets, merged datasets, transformed variables, but be aware because it is a quite large package.
+        The original dataset is available here: \code{http://pisa2009.acer.edu.au/downloads.php}. It was converted into the R package to facilitate access for researchers familiar with R.
+        The PISA2009lite package contains raw datasets available on the PISA webpage. In the package PISA2009 you will find additional datasets, merged datasets, transformed variables, but be aware because it is a quite large package.
 Repository: CRAN
 License: GPL-2
 LazyLoad: yes
